--- a/src/main/resources/com/github/namuan/onepagefx/main-view.fxml
+++ b/src/main/resources/com/github/namuan/onepagefx/main-view.fxml
@@ -3,9 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" prefHeight="539.0" prefWidth="625.0" spacing="5.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.namuan.onepagefx.MainController">
+<VBox alignment="CENTER" prefHeight="539.0" prefWidth="625.0" spacing="5.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.namuan.onepagefx.MainController">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
-    <TextArea fx:id="notesTextArea" VBox.vgrow="ALWAYS" />
+    <TextArea fx:id="notesTextArea" onKeyPressed="#onKeyPressed" VBox.vgrow="ALWAYS" />
 </VBox>
