--- a/src/main/resources/com/github/namuan/onepagefx/onepage-view.fxml
+++ b/src/main/resources/com/github/namuan/onepagefx/onepage-view.fxml
@@ -8,5 +8,5 @@
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
     </padding>
-    <TextArea fx:id="notesTextArea" onKeyPressed="#onKeyPressed" VBox.vgrow="ALWAYS"/>
+    <TextArea fx:id="notesTextArea" onKeyPressed="#onKeyPressed" wrapText="true" VBox.vgrow="ALWAYS"/>
 </VBox>
